// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalBarChart - mouse events Should render callout correctly on mouseover 1`] = `
<div
  className="fui-hbc__root"
  onMouseLeave={[Function]}
>
  <div
    key="0"
  >
    <div
      className="fui-hbc__items"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <div
        className="fui-hbc__chartTitle"
      >
        <div
          className="fui-hbc__chartTitleLeft"
          tabIndex={0}
        >
          Array [
            <span
              data-is-focusable={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
              role="text"
            >
              one
            </span>,
            <span
              hidden={true}
            />,
          ]
        </div>
        <div
          className="fui-hbc__chartTitleRight"
          data-is-focusable={false}
          role="text"
        >
          1,543
        </div>
      </div>
      <svg
        aria-label="one"
        className="fui-hbc__chart"
      >
        <g
          id="_HorizontalLine_lllllm_0"
          key="_HorizontalLine_lllllm_0"
          onClick={[Function]}
        >
          <defs>
            <linearGradient
              id="HBC_Gradient42_0_0"
            >
              <stop
                offset="0"
                stopColor="#004b50"
              />
              <stop
                offset="100%"
                stopColor=""
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="2020/04/30, 94%."
            className="fui-hbc__barWrapper"
            data-is-focusable={true}
            fill="url(#HBC_Gradient42_0_0)"
            height={12}
            key="0"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            role="img"
            rx={4}
            tabIndex={0}
            width="10.286666666666665%"
            x="0%"
            y={0}
          />
          <defs>
            <linearGradient
              id="HBC_Gradient42_0_1"
            >
              <stop
                offset="0"
                stopColor="#E6E6E6"
              />
              <stop
                offset="100%"
                stopColor="#E6E6E6"
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="13457/15000."
            className="fui-hbc__barWrapper"
            data-is-focusable={false}
            fill="url(#HBC_Gradient42_0_1)"
            height={12}
            key="1"
            onBlur={[Function]}
            onMouseLeave={[Function]}
            role="img"
            rx={4}
            width="89.71333333333334%"
            x="10.286666666666665%"
            y={0}
          />
        </g>
      </svg>
    </div>
  </div>
  <div
    key="1"
  >
    <div
      className="fui-hbc__items"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <div
        className="fui-hbc__chartTitle"
      >
        <div
          className="fui-hbc__chartTitleLeft"
          tabIndex={0}
        >
          Array [
            <span
              data-is-focusable={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
              role="text"
            >
              two
            </span>,
            <span
              hidden={true}
            />,
          ]
        </div>
        <div
          className="fui-hbc__chartTitleRight"
          data-is-focusable={false}
          role="text"
        >
          800
        </div>
      </div>
      <svg
        aria-label="two"
        className="fui-hbc__chart"
      >
        <g
          id="_HorizontalLine_lllllm_1"
          key="_HorizontalLine_lllllm_1"
          onClick={[Function]}
        >
          <defs>
            <linearGradient
              id="HBC_Gradient42_1_0"
            >
              <stop
                offset="0"
                stopColor="#5c2d91"
              />
              <stop
                offset="100%"
                stopColor=""
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="2020/04/30, 19%."
            className="fui-hbc__barWrapper"
            data-is-focusable={true}
            fill="url(#HBC_Gradient42_1_0)"
            height={12}
            key="0"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            role="img"
            rx={4}
            tabIndex={0}
            width="5.333333333333334%"
            x="0%"
            y={0}
          />
          <defs>
            <linearGradient
              id="HBC_Gradient42_1_1"
            >
              <stop
                offset="0"
                stopColor="#E6E6E6"
              />
              <stop
                offset="100%"
                stopColor="#E6E6E6"
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="14200/15000."
            className="fui-hbc__barWrapper"
            data-is-focusable={false}
            fill="url(#HBC_Gradient42_1_1)"
            height={12}
            key="1"
            onBlur={[Function]}
            onMouseLeave={[Function]}
            role="img"
            rx={4}
            width="94.66666666666667%"
            x="5.333333333333334%"
            y={0}
          />
        </g>
      </svg>
    </div>
  </div>
  <div
    className="fui-cart__calloutContainer"
    id="callout45"
  />
</div>
`;

exports[`HorizontalBarChart - mouse events Should render customized callout on mouseover 1`] = `
<div
  className="fui-hbc__root"
  onMouseLeave={[Function]}
>
  <div
    key="0"
  >
    <div
      className="fui-hbc__items"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <div
        className="fui-hbc__chartTitle"
      >
        <div
          className="fui-hbc__chartTitleLeft"
          tabIndex={0}
        >
          Array [
            <span
              data-is-focusable={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
              role="text"
            >
              one
            </span>,
            <span
              hidden={true}
            />,
          ]
        </div>
        <div
          className="fui-hbc__chartTitleRight"
          data-is-focusable={false}
          role="text"
        >
          1,543
        </div>
      </div>
      <svg
        aria-label="one"
        className="fui-hbc__chart"
      >
        <g
          id="_HorizontalLine_lllllm_0"
          key="_HorizontalLine_lllllm_0"
          onClick={[Function]}
        >
          <defs>
            <linearGradient
              id="HBC_Gradient47_0_0"
            >
              <stop
                offset="0"
                stopColor="#004b50"
              />
              <stop
                offset="100%"
                stopColor=""
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="2020/04/30, 94%."
            className="fui-hbc__barWrapper"
            data-is-focusable={true}
            fill="url(#HBC_Gradient47_0_0)"
            height={12}
            key="0"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            role="img"
            rx={4}
            tabIndex={0}
            width="10.286666666666665%"
            x="0%"
            y={0}
          />
          <defs>
            <linearGradient
              id="HBC_Gradient47_0_1"
            >
              <stop
                offset="0"
                stopColor="#E6E6E6"
              />
              <stop
                offset="100%"
                stopColor="#E6E6E6"
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="13457/15000."
            className="fui-hbc__barWrapper"
            data-is-focusable={false}
            fill="url(#HBC_Gradient47_0_1)"
            height={12}
            key="1"
            onBlur={[Function]}
            onMouseLeave={[Function]}
            role="img"
            rx={4}
            width="89.71333333333334%"
            x="10.286666666666665%"
            y={0}
          />
        </g>
      </svg>
    </div>
  </div>
  <div
    key="1"
  >
    <div
      className="fui-hbc__items"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <div
        className="fui-hbc__chartTitle"
      >
        <div
          className="fui-hbc__chartTitleLeft"
          tabIndex={0}
        >
          Array [
            <span
              data-is-focusable={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
              role="text"
            >
              two
            </span>,
            <span
              hidden={true}
            />,
          ]
        </div>
        <div
          className="fui-hbc__chartTitleRight"
          data-is-focusable={false}
          role="text"
        >
          800
        </div>
      </div>
      <svg
        aria-label="two"
        className="fui-hbc__chart"
      >
        <g
          id="_HorizontalLine_lllllm_1"
          key="_HorizontalLine_lllllm_1"
          onClick={[Function]}
        >
          <defs>
            <linearGradient
              id="HBC_Gradient47_1_0"
            >
              <stop
                offset="0"
                stopColor="#5c2d91"
              />
              <stop
                offset="100%"
                stopColor=""
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="2020/04/30, 19%."
            className="fui-hbc__barWrapper"
            data-is-focusable={true}
            fill="url(#HBC_Gradient47_1_0)"
            height={12}
            key="0"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            role="img"
            rx={4}
            tabIndex={0}
            width="5.333333333333334%"
            x="0%"
            y={0}
          />
          <defs>
            <linearGradient
              id="HBC_Gradient47_1_1"
            >
              <stop
                offset="0"
                stopColor="#E6E6E6"
              />
              <stop
                offset="100%"
                stopColor="#E6E6E6"
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="14200/15000."
            className="fui-hbc__barWrapper"
            data-is-focusable={false}
            fill="url(#HBC_Gradient47_1_1)"
            height={12}
            key="1"
            onBlur={[Function]}
            onMouseLeave={[Function]}
            role="img"
            rx={4}
            width="94.66666666666667%"
            x="5.333333333333334%"
            y={0}
          />
        </g>
      </svg>
    </div>
  </div>
  <div
    className="fui-cart__calloutContainer"
    id="callout50"
  />
</div>
`;

exports[`HorizontalBarChart snapShot testing Should not render bar labels in absolute-scale variant 1`] = `
<div
  className="fui-hbc__root"
  onMouseLeave={[Function]}
>
  <div>
    <div
      className="fui-hbc__items"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <div
        className="fui-hbc__chartTitle"
      >
        <div
          className="fui-hbc__chartTitleLeft"
          tabIndex={0}
        >
          <span
            data-is-focusable={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onPointerEnter={[Function]}
            onPointerLeave={[Function]}
            role="text"
          >
            one
          </span>
          <span
            hidden={true}
          />
        </div>
      </div>
      <svg
        aria-label="one"
        className="fui-hbc__chart"
      >
        <g
          id="_HorizontalLine_lllllm_0"
          onClick={[Function]}
        >
          <defs>
            <linearGradient
              id="HBC_Gradient7_0_0"
            >
              <stop
                offset="0"
                stopColor="#004b50"
              />
              <stop
                offset="100%"
                stopColor=""
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="2020/04/30, 94%."
            className="fui-hbc__barWrapper"
            data-is-focusable={true}
            fill="url(#HBC_Gradient7_0_0)"
            height={12}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            role="img"
            rx={4}
            tabIndex={0}
            width="10.286666666666665%"
            x="0%"
            y={0}
          />
          <text />
        </g>
      </svg>
    </div>
  </div>
  <div>
    <div
      className="fui-hbc__items"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <div
        className="fui-hbc__chartTitle"
      >
        <div
          className="fui-hbc__chartTitleLeft"
          tabIndex={0}
        >
          <span
            data-is-focusable={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onPointerEnter={[Function]}
            onPointerLeave={[Function]}
            role="text"
          >
            two
          </span>
          <span
            hidden={true}
          />
        </div>
      </div>
      <svg
        aria-label="two"
        className="fui-hbc__chart"
      >
        <g
          id="_HorizontalLine_lllllm_1"
          onClick={[Function]}
        >
          <defs>
            <linearGradient
              id="HBC_Gradient7_1_0"
            >
              <stop
                offset="0"
                stopColor="#5c2d91"
              />
              <stop
                offset="100%"
                stopColor=""
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="2020/04/30, 19%."
            className="fui-hbc__barWrapper"
            data-is-focusable={true}
            fill="url(#HBC_Gradient7_1_0)"
            height={12}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            role="img"
            rx={4}
            tabIndex={0}
            width="5.333333333333334%"
            x="0%"
            y={0}
          />
          <text />
        </g>
      </svg>
    </div>
  </div>
  <div
    className="fui-cart__calloutContainer"
    id="callout10"
  />
</div>
`;

exports[`HorizontalBarChart snapShot testing Should render absolute-scale variant correctly 1`] = `
<div
  className="fui-hbc__root"
  onMouseLeave={[Function]}
>
  <div>
    <div
      className="fui-hbc__items"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <div
        className="fui-hbc__chartTitle"
      >
        <div
          className="fui-hbc__chartTitleLeft"
          tabIndex={0}
        >
          <span
            data-is-focusable={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onPointerEnter={[Function]}
            onPointerLeave={[Function]}
            role="text"
          >
            one
          </span>
          <span
            hidden={true}
          />
        </div>
      </div>
      <svg
        aria-label="one"
        className="fui-hbc__chart"
      >
        <g
          id="_HorizontalLine_lllllm_0"
          onClick={[Function]}
        >
          <defs>
            <linearGradient
              id="HBC_Gradient2_0_0"
            >
              <stop
                offset="0"
                stopColor="#004b50"
              />
              <stop
                offset="100%"
                stopColor=""
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="2020/04/30, 94%."
            className="fui-hbc__barWrapper"
            data-is-focusable={true}
            fill="url(#HBC_Gradient2_0_0)"
            height={12}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            role="img"
            rx={4}
            tabIndex={0}
            width="10.286666666666665%"
            x="0%"
            y={0}
          />
          <text
            aria-hidden={true}
            className="fui-hbc__barLabel"
            dominantBaseline="central"
            transform="translate(4)"
            x="10.286666666666665%"
            y={6}
          >
            1.5k
          </text>
        </g>
      </svg>
    </div>
  </div>
  <div>
    <div
      className="fui-hbc__items"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <div
        className="fui-hbc__chartTitle"
      >
        <div
          className="fui-hbc__chartTitleLeft"
          tabIndex={0}
        >
          <span
            data-is-focusable={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onPointerEnter={[Function]}
            onPointerLeave={[Function]}
            role="text"
          >
            two
          </span>
          <span
            hidden={true}
          />
        </div>
      </div>
      <svg
        aria-label="two"
        className="fui-hbc__chart"
      >
        <g
          id="_HorizontalLine_lllllm_1"
          onClick={[Function]}
        >
          <defs>
            <linearGradient
              id="HBC_Gradient2_1_0"
            >
              <stop
                offset="0"
                stopColor="#5c2d91"
              />
              <stop
                offset="100%"
                stopColor=""
              />
            </linearGradient>
          </defs>
          <rect
            aria-label="2020/04/30, 19%."
            className="fui-hbc__barWrapper"
            data-is-focusable={true}
            fill="url(#HBC_Gradient2_1_0)"
            height={12}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            role="img"
            rx={4}
            tabIndex={0}
            width="5.333333333333334%"
            x="0%"
            y={0}
          />
          <text
            aria-hidden={true}
            className="fui-hbc__barLabel"
            dominantBaseline="central"
            transform="translate(4)"
            x="5.333333333333334%"
            y={6}
          >
            800
          </text>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="fui-cart__calloutContainer"
    id="callout5"
  />
</div>
`;

exports[`Render calling with respective to props No prop changes 1`] = `ReactWrapper {}`;

exports[`Render calling with respective to props No prop changes 2`] = `ReactWrapper {}`;
